Remove: unneccesary code Add: Anime Module

--- a/Meru.Core.SDK/Miki.Common.csproj
+++ b/Meru.Core.SDK/Miki.Common.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>Miki.Common</AssemblyName>
+    <RootNamespace>Miki.Common</RootNamespace>
   </PropertyGroup>
 
 </Project>
