--- a/Miki.Core/Miki.csproj
+++ b/Miki.Core/Miki.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>Miki</AssemblyName>
+    <RootNamespace>Miki</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -184,25 +186,25 @@
     <PackageReference Include="Discord.Net" Version="1.0.2" />
     <PackageReference Include="DogStatsD-CSharp-Client" Version="3.1.0" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
-    <PackageReference Include="MalApi" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
-    <PackageReference Include="Miki.Rest" Version="1.0.0" />
+    <PackageReference Include="Miki.Rest" Version="1.2.0" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Npgsql" Version="3.2.6" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.1" />
     <PackageReference Include="SharpRaven" Version="2.2.0" />
     <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
-    <PackageReference Include="StackExchange.Redis.Extensions.Protobuf" Version="2.3.0" />
+    <PackageReference Include="StackExchange.Redis.Extensions.Protobuf" Version="3.0.1" />
     <PackageReference Include="SteamKit2" Version="2.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Meru.Core.SDK\Meru.Core.SDK.csproj" />
-    <ProjectReference Include="..\Meru.Core\Meru.Core.csproj" />
+    <ProjectReference Include="..\Meru.Core.SDK\Miki.Common.csproj" />
+    <ProjectReference Include="..\Meru.Core\Miki.Framework.csproj" />
     <ProjectReference Include="..\Miki.API.Core\Miki.API.Core.csproj" />
+    <ProjectReference Include="D:\Projects\Miki.Anilist\Miki.Anilist\Miki.Anilist.csproj" />
   </ItemGroup>
 
   <ItemGroup>
