--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -9,8 +9,11 @@
 
   <ItemGroup>
     <Compile Remove="Languages\**" />
+    <Compile Remove="miki\**" />
     <EmbeddedResource Remove="Languages\**" />
+    <EmbeddedResource Remove="miki\**" />
     <None Remove="Languages\**" />
+    <None Remove="miki\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -201,7 +204,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Miki.API.Core\Miki.Api.csproj" />
+    <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
     <ProjectReference Include="D:\Projects\Miki.Anilist\Miki.Anilist\Miki.Anilist.csproj" />
     <ProjectReference Include="D:\Projects\Miki.Common\Miki.Common\Miki.Common.csproj" />
     <ProjectReference Include="D:\Projects\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
