--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -22,6 +22,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>ar-AE.resx</DependentUpon>
     </Compile>
+    <Compile Include="Languages\bg-BG.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>bg-BG.resx</DependentUpon>
+    </Compile>
     <Compile Include="Languages\cz-CZ.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -62,17 +67,37 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>he-HE.resx</DependentUpon>
     </Compile>
+    <Compile Include="Languages\hi-HI.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>hi-HI.resx</DependentUpon>
+    </Compile>
     <Compile Include="Languages\hu-HU.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>hu-HU.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Languages\it-IT.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>it-IT.resx</DependentUpon>
     </Compile>
     <Compile Include="Languages\ja-JA.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>ja-JA.resx</DependentUpon>
     </Compile>
-    <Compile Include="Languages\LocaleStrings.cs" />
+    <Compile Include="Languages\Locale.cs" />
+    <Compile Include="Languages\lt-LT.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>lt-LT.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Languages\ms-MS.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ms-MS.resx</DependentUpon>
+    </Compile>
     <Compile Include="Languages\nl-NL.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -82,6 +107,16 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>no-NO.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Languages\pl-PL.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>pl-PL.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Languages\pt-BR.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>pt-BR.resx</DependentUpon>
     </Compile>
     <Compile Include="Languages\pt-PT.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -97,6 +132,16 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>sv-SE.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Languages\tl-PH.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>tl-PH.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Languages\uk-UA.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>uk-UA.resx</DependentUpon>
     </Compile>
     <Compile Include="Languages\zh-CHS.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -114,6 +159,10 @@
     <EmbeddedResource Include="Languages\ar-AE.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ar-AE.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Languages\bg-BG.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>bg-BG.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Languages\cz-CZ.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -147,13 +196,29 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>he-HE.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Languages\hi-HI.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>hi-HI.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Languages\hu-HU.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>hu-HU.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Languages\it-IT.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>it-IT.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Languages\ja-JA.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ja-JA.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Languages\lt-LT.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>lt-LT.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Languages\ms-MS.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ms-MS.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Languages\nl-NL.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -162,6 +227,14 @@
     <EmbeddedResource Include="Languages\no-NO.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>no-NO.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Languages\pl-PL.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>pl-PL.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Languages\pt-BR.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>pt-BR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Languages\pt-PT.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -174,6 +247,14 @@
     <EmbeddedResource Include="Languages\sv-SE.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>sv-SE.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Languages\tl-PH.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>tl-PH.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Languages\uk-UA.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>uk-UA.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Languages\zh-CHS.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -207,7 +288,9 @@
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
     <ProjectReference Include="D:\Projects\Miki.Anilist\Miki.Anilist\Miki.Anilist.csproj" />
     <ProjectReference Include="D:\Projects\Miki.Common\Miki.Common\Miki.Common.csproj" />
+    <ProjectReference Include="D:\Projects\Miki.DblApi\Miki.DblApi\Miki.DblApi.csproj" />
     <ProjectReference Include="D:\Projects\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
+    <ProjectReference Include="D:\Projects\Miki.Rest\Miki.Rest\Miki.Rest.csproj" />
   </ItemGroup>
 
   <ItemGroup>
