--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -151,7 +151,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="1.0.2" />
+    <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
     <PackageReference Include="DogStatsD-CSharp-Client" Version="3.1.0" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
@@ -294,10 +294,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Miki.Anilist\Miki.Anilist\Miki.Anilist.csproj" />
-    <ProjectReference Include="..\..\Miki.Common\Miki.Common\Miki.Common.csproj" />
-    <ProjectReference Include="..\..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
+    <ProjectReference Include="D:\Projects\Miki.Anilist\Miki.Anilist\Miki.Anilist.csproj" />
+    <ProjectReference Include="D:\Projects\Miki.Common\Miki.Common\Miki.Common.csproj" />
+    <ProjectReference Include="D:\Projects\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
   </ItemGroup>
 
 </Project>
