--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -160,6 +160,7 @@
     <PackageReference Include="Miki.Anilist" Version="0.5.0" />
     <PackageReference Include="Miki.Common" Version="1.1.0" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
+    <PackageReference Include="Miki.Framework" Version="1.1.3" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
     <PackageReference Include="Miki.Rest" Version="1.3.2" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
@@ -299,7 +300,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
-    <ProjectReference Include="D:\Projects\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
   </ItemGroup>
 
 </Project>
