--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -158,7 +158,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Miki.Anilist" Version="0.5.0" />
-    <PackageReference Include="Miki.Common" Version="1.1.0" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Framework" Version="1.1.5" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
@@ -300,6 +299,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
+    <ProjectReference Include="D:\Projects\Miki.Common\Miki.Common\Miki.Common.csproj" />
+    <ProjectReference Include="D:\Projects\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
   </ItemGroup>
 
 </Project>
