--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -82,7 +82,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>ja-JA.resx</DependentUpon>
     </Compile>
-    <Compile Include="Languages\Locale.cs" />
     <Compile Include="Languages\lt-LT.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -151,6 +150,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.3.17.2" />
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
     <PackageReference Include="DiscordBotsList.Api" Version="1.1.0" />
     <PackageReference Include="DogStatsD-CSharp-Client" Version="3.1.0" />
@@ -160,7 +160,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
     <PackageReference Include="Miki.Anilist" Version="0.5.0" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
-    <PackageReference Include="Miki.Framework" Version="1.2.2" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
     <PackageReference Include="Miki.Rest" Version="1.3.2" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
@@ -300,6 +299,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
+    <ProjectReference Include="D:\Projects\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
   </ItemGroup>
 
 </Project>
