Move: to distributed sharding

--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -299,6 +299,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
   </ItemGroup>
 
