--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -152,7 +152,6 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.3.18" />
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
-    <PackageReference Include="DiscordBotsList.Api" Version="1.1.0" />
     <PackageReference Include="DogStatsD-CSharp-Client" Version="3.1.0" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
@@ -161,16 +160,16 @@
     <PackageReference Include="Miki.Anilist" Version="0.5.0" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
-    <PackageReference Include="Miki.Rest" Version="1.3.2" />
+    <PackageReference Include="Miki.Rest" Version="1.3.3" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.0.1" />
     <PackageReference Include="SharpRaven" Version="2.3.2" />
     <PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="3.3.0" />
     <PackageReference Include="StackExchange.Redis.Extensions.Protobuf" Version="3.3.0" />
     <PackageReference Include="SteamKit2" Version="2.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.7.17" />
   </ItemGroup>
 
   <ItemGroup>
