--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -8,21 +8,18 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.3.18.2" />
     <PackageReference Include="CountLib" Version="1.0.1" />
-    <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.1" />
     <PackageReference Include="Miki.Anilist" Version="0.5.0" />
+    <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
-    <PackageReference Include="Miki.Rest" Version="1.3.3" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
-    <PackageReference Include="RabbitMQ.Client" Version="5.0.1" />
     <PackageReference Include="SharpRaven" Version="2.3.2" />
-    <PackageReference Include="StackExchange.Redis.Extensions.Protobuf" Version="3.3.0" />
     <PackageReference Include="SteamKit2" Version="2.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
   </ItemGroup>
@@ -35,7 +32,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
-    <ProjectReference Include="..\Miki.Configuration\Miki.Configuration.csproj" />
   </ItemGroup>
 
   <ItemGroup>
