--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
+    <PackageReference Include="Miki.Rest" Version="1.4.1" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
     <PackageReference Include="SharpRaven" Version="2.3.2" />
