--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -13,14 +13,15 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.1" />
-    <PackageReference Include="Miki.Anilist" Version="0.5.0" />
+    <PackageReference Include="Miki.Anilist" Version="0.5.1" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
-    <PackageReference Include="Miki.Rest" Version="1.4.1" />
+    <PackageReference Include="Miki.Rest" Version="1.5.1" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
-    <PackageReference Include="SharpRaven" Version="2.3.2" />
+    <PackageReference Include="SharpRaven" Version="2.4.0" />
     <PackageReference Include="SteamKit2" Version="2.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
   </ItemGroup>
