--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -33,6 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Miki.Discord\Miki.Discord.Rest\Miki.Discord.Rest.csproj" />
+    <ProjectReference Include="..\..\Miki.Discord\Miki.Discord\Miki.Discord.csproj" />
     <ProjectReference Include="..\..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
   </ItemGroup>
