add miki.cache implementation

--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -23,6 +23,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
     <PackageReference Include="SharpRaven" Version="2.4.0" />
+    <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="3.5.0" />
+    <PackageReference Include="StackExchange.Redis.Extensions.Protobuf" Version="3.5.0" />
     <PackageReference Include="SteamKit2" Version="2.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
   </ItemGroup>
@@ -33,6 +35,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Miki.Cache\Miki.Cache.Serializer.Protobuf\Miki.Cache.Serializer.Protobuf.csproj" />
+    <ProjectReference Include="..\..\Miki.Cache\Miki.Cache.StackExchange.Redis\Miki.Cache.StackExchange.Redis.csproj" />
+    <ProjectReference Include="..\..\Miki.Cache\Miki.Cache\Miki.Cache.csproj" />
+    <ProjectReference Include="..\..\Miki.Discord\Miki.Discord.Caching\Miki.Discord.Caching.csproj" />
+    <ProjectReference Include="..\..\Miki.Discord\Miki.Discord.Common\Miki.Discord.Common.csproj" />
+    <ProjectReference Include="..\..\Miki.Discord\Miki.Discord.Messaging\Miki.Discord.Messaging.csproj" />
     <ProjectReference Include="..\..\Miki.Discord\Miki.Discord.Rest\Miki.Discord.Rest.csproj" />
     <ProjectReference Include="..\..\Miki.Discord\Miki.Discord\Miki.Discord.csproj" />
     <ProjectReference Include="..\..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
