minor bug fixes, caching update

--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -14,9 +14,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.1" />
     <PackageReference Include="Miki.Anilist" Version="0.5.1" />
-    <PackageReference Include="Miki.Cache" Version="0.1.1" />
-    <PackageReference Include="Miki.Cache.Serializer.Protobuf" Version="1.0.1" />
-    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="1.0.1" />
+    <PackageReference Include="Miki.Cache" Version="0.3.0" />
+    <PackageReference Include="Miki.Cache.Serializer.Protobuf" Version="1.0.2" />
+    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="1.2.0" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Logging" Version="1.1.2" />
@@ -26,10 +26,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
     <PackageReference Include="SharpRaven" Version="2.4.0" />
-    <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="3.5.0" />
-    <PackageReference Include="StackExchange.Redis.Extensions.Protobuf" Version="3.5.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.0.0-alpha.205" />
     <PackageReference Include="SteamKit2" Version="2.0.0" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Miki.Cache\Miki.Cache\Miki.Cache.csproj" />
     <ProjectReference Include="..\..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
   </ItemGroup>
