Update: to Miki.Discord 0.3-pre

--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Miki.Framework\Miki.Framework\Miki.Framework.csproj" />
     <ProjectReference Include="..\Miki.Api\Miki.Api.csproj" />
+    <ProjectReference Include="..\Miki.Discord.Gateway.Centralized\Miki.Discord.Gateway.Centralized.csproj" />
   </ItemGroup>
 
   <ItemGroup>
