--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -14,25 +14,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.18.2" />
-    <PackageReference Include="CountLib" Version="1.0.1" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.20.4" />
+    <PackageReference Include="CountLib" Version="1.0.2" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.3" />
     <PackageReference Include="Miki.Anilist" Version="0.5.1" />
-    <PackageReference Include="Miki.Cache" Version="0.3.0" />
-    <PackageReference Include="Miki.Cache.Serializer.Protobuf" Version="1.0.2" />
-    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="1.3.0" />
+    <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="1.3.1" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
+    <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
+    <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.2.2" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Logging" Version="1.1.2" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
+    <PackageReference Include="Miki.Serialization.Protobuf" Version="1.0.4" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Npgsql" Version="3.2.7" />
     <PackageReference Include="SharpRaven" Version="2.4.0" />
-    <PackageReference Include="SteamKit2" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
