--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Configurations>Debug;Release;Debug Production;Prod</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -13,8 +14,12 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Prod|AnyCPU'">
+    <LangVersion>7.3</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.3.20.4" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.21" />
     <PackageReference Include="CountLib" Version="1.0.2" />
     <PackageReference Include="Imgur.API" Version="4.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.3" />
@@ -23,7 +28,7 @@
     <PackageReference Include="Miki.Cache.StackExchange.Redis" Version="1.3.1" />
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
-    <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.2.2" />
+    <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.2.3" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Logging" Version="1.1.2" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
