--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Miki.Configuration" Version="1.0.0" />
     <PackageReference Include="Miki.Configuration.Providers.Json" Version="1.0.0" />
     <PackageReference Include="Miki.Discord.Gateway.Distributed" Version="1.2.3" />
+    <PackageReference Include="Miki.Discord.Rest" Version="2.3.2" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
     <PackageReference Include="Miki.Logging" Version="1.1.2" />
     <PackageReference Include="Miki.Patreon" Version="0.1.0" />
