--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-
 [submodule "Miki.Bot.Models"]
 	path = Miki.Bot.Models
-	url = https://github.com/mikibot/miki.bot.models
+	url = https://github.com/mikibot/Miki.Bot.Models
